tree-sitter-harn/grammar.js
    source_file: ($) => topLevelSeparated($, $._top_level_item),

    _top_level_item: ($) =>
      choice(
        $.attributed_declaration,
        $.pipeline_declaration,
        $.import_declaration,
        $._statement
      ),

    // Attributes: `@name` or `@name(arg, key: value)`. Stack on the
    // declaration that follows. Mirrors the parser in
    // crates/harn-parser/src/parser.rs (parse_attributed_decl), whose
    // `skip_newlines()` swallows any run of newlines between an attribute and
    // the declaration it decorates.
    //
    // `repeat($._line_sep)` (not `optional`) is required because a comment
    // between the attribute and the declaration (e.g. a doc comment:
    // `@complexity(allow)` / `/** ... */` / `pub fn`) is lexed as an `extras`
    // node sandwiched between TWO separators — the newline after the attribute
    // and the newline after the comment. `optional` only consumed the first,
    // leaving the second to error out before the declaration. The canonical
    // lexer treats comments as trivia, so this construct is valid Harn.
    pipeline_declaration: ($) =>
      seq(
        optional("pub"),
        "pipeline",
        field("name", $.identifier),
        "(",
        parameterList($),
        ")",
        optional(seq("->", field("return_type", $.type_annotation))),
        optional(seq("throws", field("throws", $.type_annotation))),
        optional(seq("extends", field("parent", $.identifier))),
        $.block
      ),

    _statement: ($) =>
      choice(
        $.let_binding,
        $.const_binding,
        $.var_binding,
        $.if_statement,
        $.for_statement,
        $.while_statement,
        $.match_statement,
        $.retry_statement,
        $.cost_route_block,
        $.return_statement,
        $.throw_statement,
        $.fn_declaration,
        $.tool_declaration,
        $.skill_declaration,
        $.eval_pack_declaration,
        $.override_declaration,
        $.enum_declaration,
        $.struct_declaration,
        $.impl_block,
        $.interface_declaration,
        $.type_declaration,
        $.parallel_expression,
        $.parallel_each_expression,
        $.parallel_settle_expression,
        $.defer_statement,
        $.deadline_block,
        $.guard_statement,
        $.require_statement,
        $.mutex_block,
        $.scope_block,
        $.block_statement,
        $.select_block,
        $.break_statement,
        $.continue_statement,
        $.yield_expression,
        $.emit_expression,
        $.assignment,
        $.compound_assignment,
        $.expression_statement
      ),

    expression_statement: ($) => prec(1, $._expression),

    let_binding: ($) =>
      seq(
        optional("pub"),
        "let",
        field("name", $._binding_pattern),
        optional(seq(":", field("type", $.type_annotation))),
        "=",
        repeat(lineBreak($)),
        field("value", $._expression)
      ),

    _binding_pattern: ($) =>
      choice(
        $.identifier,
        $.dict_pattern,
        $.list_pattern,
        $.pair_pattern
      ),

    if_statement: ($) =>
      prec.right(seq(
        "if",
        field("condition", $._expression),
        field("consequence", $.block),
        optional(seq("else", choice($.if_statement, $.block)))
      )),

    return_statement: ($) => prec.right(seq("return", optional($._expression))),

    fn_declaration: ($) =>
      seq(
        optional("pub"),
        optional("gen"),
        "fn",
        field("name", $.identifier),
        optional($.generic_params),
        "(",
        parameterList($),
        ")",
        optional(choice(
          prec(2, seq("->", $.type_predicate)),
          prec(1, seq("->", $.type_annotation))
        )),
        optional(seq("throws", field("throws", $.type_annotation))),
        optional($.where_clause),
        field("body", $.block)
      ),

    skill_declaration: ($) =>
      seq(
        optional("pub"),
        "skill",
        field("name", $.identifier),
        "{",
        statementSeparated(
          $,
          seq(
            field("field_name", $.identifier),
            field("field_value", $._expression)
          )
        ),
        "}"
      ),

    _expression: ($) =>
      choice(
        $.pipe_expression,
        $.ternary_expression,
        $.nil_coalescing_expression,
        $.binary_expression,
        $.range_expression,
        $.unary_expression,
        $.call_expression,
        $.generic_call_expression,
        $.method_call,
        $.subscript_expression,
        $.property_access,
        $.slice_expression,
        $.try_unwrap_expression,
        $.non_null_expression,
        $.parenthesized_expression,
        $.spawn_expression,
        $.try_expression,
        $.try_star_expression,
        $.deadline_block,
        $.parallel_expression,
        $.parallel_each_expression,
        $.parallel_settle_expression,
        $.if_statement,
        $.retry_statement,
        $.cost_route_block,
        $.match_statement,
        // Struct construction (`TypeName { field: value }`) is a general
        // expression, mirroring the runtime parser where it is a postfix on an
        // identifier primary (crates/harn-parser parse loop +
        // is_struct_construct_lookahead). Keeping it here — rather than only in
        // binding initializers and call arguments — lets `return Point {..}`,
        // ternary arms, and list/dict elements parse. GLR disambiguates it from
        // a block via the `dict_literal` shape (`{ ident: ... }` or `{}`); a
        // block of statements is not a dict literal, so `if Foo { stmt }` still
        // reads `Foo` + block. See conflict `[$._primary, $.struct_construct]`.
        $.struct_construct,
        $._primary
      ),

    call_expression: ($) =>
      prec.left(
        13,
        seq(
          field("function", choice(
            $._value_identifier,
            $.call_expression,
            $.property_access,
            $.subscript_expression,
            $.parenthesized_expression
          )),
          "(",
          repeat(lineBreak($)),
          optional($.argument_list),
          repeat(lineBreak($)),
          ")"
        )
      ),

    // Generic-call form `func<T, U>(args)`. Kept distinct from
    // `call_expression` so that adding generic-type arguments to a callable
    // does not statically out-prioritise binary `<` comparisons whose LHS
    // happens to be a callable expression (`i < 5`, `obj.x < 5`, `(i) < 5`).
    // The leading `<` is captured by the `type_arguments` rule via
    // `token.immediate("<")`, which means the generic-call form requires
    // the `<` to immediately follow the function with no whitespace —
    // matching how generic calls are written in real Harn corpora.
    try_expression: ($) =>
      prec.right(
        seq(
          "try",
          field("body", $.block),
          optional(
            seq(
              "catch",
              optional(choice(
                seq(
                  "(",
                  field("error_var", $.identifier),
                  optional(seq(":", field("error_type", $.type_annotation))),
                  ")"
                ),
                field("error_var", $.identifier)
              )),
              field("handler", $.block)
            )
          ),
          optional(seq("finally", field("finalizer", $.block)))
        )
      ),

    // try* EXPR — rethrow-into-catch operator (issue #26). Distinct from
    // try { ... } / try { ... } catch above; binds tighter than `try`'s
    // block form because the operand is an expression, not a block.
    // Whitespace between `try` and `*` is allowed but not required —
    // matching the runtime parser, which treats `try*` as a token pair.
    try_star_expression: ($) =>
      prec.right(20, seq("try", "*", field("operand", $._expression))),

    string_literal: ($) =>
      seq(
        alias('"', $.string_delimiter),
        repeat(choice(
          $.interpolation,
          $.string_content,
          $.string_escape,
          $.string_dollar
        )),
        alias(token.immediate('"'), $.string_delimiter)
      ),

    multiline_string_literal: ($) =>
      seq(
        alias('"""', $.multiline_string_delimiter),
        repeat(choice(
          $.interpolation,
          $.multiline_string_content,
          $.string_dollar
        )),
        alias(token.immediate('"""'), $.multiline_string_delimiter)
      ),

    raw_string_literal: ($) =>
      choice($._hashed_raw_string, seq(
        alias('r"', $.raw_string_delimiter),
        optional($.raw_string_content),
        alias(token.immediate('"'), $.raw_string_delimiter)
      )),

    string_content: (_) =>
      token.immediate(prec(1, /[^"\\$\n]+/)),

    multiline_string_content: (_) =>
      token.immediate(prec(1, /([^"$\\]|"[^"]|""[^"]|\\[\s\S])+/)),

    raw_string_content: (_) =>
      token.immediate(prec(1, /[^"\n]+/)),

    true: (_) => "true",
    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // These introduce blocks only before `{` at statement position. Preserve
    // identifier nodes for their ordinary value, call and assignment uses.
    _value_identifier: ($) => choice(
      $.identifier,
      alias("scope", $.identifier),
      alias("block", $.identifier)
    ),

    list_literal: ($) =>
      seq(
        "[",
        repeat(choice($._list_element, ",", lineBreak($))),
        "]"
      ),

    _list_element: ($) =>
      choice(
        $.spread_expression,
        $._expression
      ),

    dict_literal: ($) =>
      seq(
        "{",
        repeat(choice($._dict_element, ",", lineBreak($))),
        "}"
      ),

    _dict_element: ($) =>
      choice(
        $.spread_expression,
        $.dict_entry
      ),

    dict_entry: ($) =>
      seq(
        field(
          "key",
          choice(
            $.identifier,
            $.keyword_identifier,
            $.string_literal,
            seq("[", $._expression, "]")
          )
        ),
        ":",
        repeat(lineBreak($)),
        field("value", $._expression)
      ),

    fn_expression: ($) =>
      seq(
        "fn",
        "(",
        parameterList($),
        ")",
        optional(seq("->", field("return_type", $.type_annotation))),
        optional(seq("throws", field("throws", $.type_annotation))),
        field("body", $.block)
      ),

    // --- Shared rules ---

    block: ($) =>
      seq(
        "{",
        statementSeparated($, $._statement),
        "}"
      ),

    parameter_list: ($) =>
      prec.right(seq(
        $.typed_parameter,
        repeat(seq(",", repeat(lineBreak($)), $.typed_parameter)),
        optional(seq(",", repeat(lineBreak($))))
      )),

    typed_parameter: ($) =>
      seq(
        optional("..."),
        field("name", $.identifier),
        optional(seq(":", field("type", $.type_annotation))),
        optional(seq("=", field("default", $._expression)))
      ),

    argument_list: ($) =>
      prec.right(seq(
        $._argument_element,
        repeat(seq(",", repeat(lineBreak($)), $._argument_element)),
        optional(seq(",", repeat(lineBreak($))))
      )),

    _argument_element: ($) =>
      choice(
        $.spread_expression,
        $._expression
      ),

    type_annotation: ($) =>
      choice(
        $.fn_type,
        seq("[", $.type_annotation, "]"),
        seq($.identifier, "<", $.type_annotation, ",", $.type_annotation, ">"),
        seq($.identifier, "<", $.type_annotation, ">"),
        prec.left(1, seq($.type_annotation, "|", $.type_annotation)),
        prec.left(2, seq($.type_annotation, "&", $.type_annotation)),
        // Postfix `?` is sugar for `T | nil`. Higher precedence than
        // `&` and `|` so `A & B?` parses as `A & (B?)`.
        prec.left(3, seq($.type_annotation, "?")),
        $.shape_type,
        $.identifier,
        $.string_literal,
        $.raw_string_literal,
        $.integer_literal,
        seq("-", $.integer_literal)
      ),

    type_predicate: ($) =>
      prec(1, seq(
        optional("implies"),
        field("parameter", $.identifier),
        "is",
        field("type", $.type_annotation)
      )),

    // Row-polymorphic shape type. After the regular named fields, a shape
    // may carry one or more trailing row tails (`...<type>`), mirroring the
    // value-level spread (`{...a, b: 1}`) and rest params (`fn f(...args)`).
    // Forms accepted (matching the Rust parser):
    //   { id: string, ...rest }      — fields + a row variable
    //   { ...R1, ...R2 }             — row tails only, no explicit fields
    //   { a: int, ...dict<string, V> } — a tail can be any type, not just an ident
    //   { a: int, b?: string }       — plain closed shape (no tails)
