tree-sitter-harn/test/corpus/skill_declaration.txt
==================
Public Skill Declaration
==================

pub skill deploy {
  description "Deploy the app"
  invocation "explicit"
  paths ["infra/**", "Dockerfile"]
  on_activate fn() { log("activated") }
}

---

(source_file
  (skill_declaration
    name: (identifier)
    field_name: (identifier)
    field_value: (string_literal
      (string_delimiter)
      (string_content)
      (string_delimiter))
    field_name: (identifier)
    field_value: (string_literal
      (string_delimiter)
      (string_content)
      (string_delimiter))
    field_name: (identifier)
    field_value: (list_literal
      (string_literal
        (string_delimiter)
        (string_content)
        (string_delimiter))
      (string_literal
        (string_delimiter)
        (string_content)
        (string_delimiter)))
    field_name: (identifier)
    field_value: (fn_expression
      body: (block
        (expression_statement
          (call_expression
            function: (identifier)
            (argument_list
              (string_literal
                (string_delimiter)
                (string_content)
                (string_delimiter)))))))))
