tree-sitter-harn/test/corpus/try_catch.txt
==================
Bare Try Expression
==================

pipeline test(task) {
  let r = try { risky() }
}

---

(source_file
  (pipeline_declaration
    name: (identifier)
    (parameter_list
      (typed_parameter
        name: (identifier)))
    (block
      (let_binding
        name: (identifier)
        value: (try_expression
          body: (block
            (expression_statement
              (call_expression
                function: (identifier)))))))))

==================
Try Catch As Expression
==================

pipeline test(task) {
  let v = try { work() } catch (e) { fallback }
}

---

(source_file
  (pipeline_declaration
    name: (identifier)
    (parameter_list
      (typed_parameter
        name: (identifier)))
    (block
      (let_binding
        name: (identifier)
        value: (try_expression
          body: (block
            (expression_statement
              (call_expression
                function: (identifier))))
          error_var: (identifier)
          handler: (block
            (expression_statement
              (identifier))))))))

==================
Try Catch Bare Error Variable
==================

pipeline test(task) {
  let v = try { work() } catch e { fallback }
}

---

(source_file
  (pipeline_declaration
    name: (identifier)
    (parameter_list
      (typed_parameter
        name: (identifier)))
    (block
      (let_binding
        name: (identifier)
        value: (try_expression
          body: (block
            (expression_statement
              (call_expression
                function: (identifier))))
          error_var: (identifier)
          handler: (block
            (expression_statement
              (identifier))))))))

==================
Typed Catch Expression
==================

pipeline test(task) {
  let v = try { parse(raw) } catch (e: AppError) { default }
}

---

(source_file
  (pipeline_declaration
    name: (identifier)
    (parameter_list
      (typed_parameter
        name: (identifier)))
    (block
      (let_binding
        name: (identifier)
        value: (try_expression
          body: (block
            (expression_statement
              (call_expression
                function: (identifier)
                (argument_list
                  (identifier)))))
          error_var: (identifier)
          error_type: (type_annotation
            (identifier))
          handler: (block
            (expression_statement
              (identifier))))))))

==================
Try Catch Finally Statement
==================

pipeline test(task) {
  try {
    do_work()
  } catch (e) {
    println(e)
  } finally {
    cleanup()
  }
}

---

(source_file
  (pipeline_declaration
    name: (identifier)
    (parameter_list
      (typed_parameter
        name: (identifier)))
    (block
      (expression_statement
        (try_expression
          body: (block
            (expression_statement
              (call_expression
                function: (identifier))))
          error_var: (identifier)
          handler: (block
            (expression_statement
              (call_expression
                function: (identifier)
                (argument_list
                  (identifier)))))
          finalizer: (block
            (expression_statement
              (call_expression
                function: (identifier)))))))))

==================
Try Finally Only Expression
==================

pipeline test(task) {
  let r = try { body() } finally { teardown() }
}

---

(source_file
  (pipeline_declaration
    name: (identifier)
    (parameter_list
      (typed_parameter
        name: (identifier)))
    (block
      (let_binding
        name: (identifier)
        value: (try_expression
          body: (block
            (expression_statement
              (call_expression
                function: (identifier))))
          finalizer: (block
            (expression_statement
              (call_expression
                function: (identifier)))))))))

==================
Try Star Expression
==================

pipeline test(task) {
  let v = try* risky()
}

---

(source_file
  (pipeline_declaration
    name: (identifier)
    (parameter_list
      (typed_parameter
        name: (identifier)))
    (block
      (let_binding
        name: (identifier)
        value: (try_star_expression
          operand: (call_expression
            function: (identifier)))))))

==================
Throws Clauses
==================

fn parse(raw: str) -> dict throws AppError {
  return {}
}

pipeline run(task) throws AppError {
  return parse("{}")
}

---

(source_file
  (fn_declaration
    name: (identifier)
    (parameter_list
      (typed_parameter
        name: (identifier)
        type: (type_annotation
          (identifier))))
    (type_annotation
      (identifier))
    throws: (type_annotation
      (identifier))
    body: (block
      (return_statement
        (dict_literal))))
  (pipeline_declaration
    name: (identifier)
    (parameter_list
      (typed_parameter
        name: (identifier)))
    throws: (type_annotation
      (identifier))
    (block
      (return_statement
        (call_expression
          function: (identifier)
          (argument_list
            (string_literal
              (string_delimiter)
              (string_content)
              (string_delimiter))))))))
