tree-sitter-harn/test/corpus/workflow.txt
==================
Workflow Graph Call
==================

pipeline main(task) {
  let flow = workflow_graph({entry: "act"})
  if true {
    return flow
  }
}

---

(source_file
  (pipeline_declaration
    name: (identifier)
    (parameter_list
      (typed_parameter
        name: (identifier)))
    (block
      (let_binding
        name: (identifier)
        value: (call_expression
          function: (identifier)
          (argument_list
            (dict_literal
              (dict_entry
                key: (identifier)
                value: (string_literal
                  (string_delimiter)
                  (string_content)
                  (string_delimiter)))))))
      (if_statement
        condition: (true)
        consequence: (block
          (return_statement
            (identifier)))))))
